feat(encoding): reencode index9 series to utf-8

--- a/print9552.html
+++ b/print9552.html
@@ -2,7 +2,7 @@
 <title>Хотите лучших результатов? Мыслите проектами!</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F48AF by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:50 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Про один из главных навыков бизнес-мышления, который не только делает наши действия на порядок эффективнее, но и выводит на новый уровень зрелости.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
