--- a/print9783.html
+++ b/print9783.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ïî÷åìó îíè ðÿäîì ñ Âàìè? Îá îäíîì èíòåðåñíîì èññëåäîâàíèè.</title>
+<title>Почему они рядом с Вами? Об одном интересном исследовании.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A6B by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Îêàçûâàåòñÿ, çíàíèÿ è íàâûêè, êîòîðûå ìû ïîëó÷àåì, âëèÿþò íà íàøå ðàçâèòèå òîëüêî íà 10-15%.  À îñíîâíîå âëèÿíèå íà íàøå ðàçâèòèå (îêîëî 80%) îêàçûâàþò ëþäè, ñ êîòîðûìè ìû îáùàåìñÿ áîëüøóþ ÷àñòü âðåìåíè.'>
+<meta name="description" content='Оказывается, знания и навыки, которые мы получаем, влияют на наше развитие только на 10-15%.  А основное влияние на наше развитие (около 80%) оказывают люди, с которыми мы общаемся большую часть времени.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,26 +14,26 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ïî÷åìó îíè ðÿäîì ñ Âàìè? Îá îäíîì èíòåðåñíîì èññëåäîâàíèè.</h1><a href=index9783.html?id=F4A6B class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Íåäàâíî ÿ óçíàë îá èíòåðåñíîì ïñèõîëîãè÷åñêîì èññëåäîâàíèè. Ê ñîæàëåíèþ, íå ïîìíþ äåòàëåé (êòî-òî èç êîëëåã ðàññêàçàë, è ÿ âñå íå çàïîìíèë), íî ñóòü òàêîâà:<br />
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Почему они рядом с Вами? Об одном интересном исследовании.</h1><a href=index9783.html?id=F4A6B class=slink>web-версия</a><p><span class='print'><p>
+	Недавно я узнал об интересном психологическом исследовании. К сожалению, не помню деталей (кто-то из коллег рассказал, и я все не запомнил), но суть такова:<br />
 	<br />
-	Îêàçûâàåòñÿ, çíàíèÿ è íàâûêè, êîòîðûå ìû ïîëó÷àåì, âëèÿþò íà íàøå ðàçâèòèå òîëüêî íà 10-15%.<br />
+	Оказывается, знания и навыки, которые мы получаем, влияют на наше развитие только на 10-15%.<br />
 	<br />
-	À îñíîâíîå âëèÿíèå íà íàøå ðàçâèòèå (îêîëî 80%) îêàçûâàþò ëþäè, ñ êîòîðûìè ìû îáùàåìñÿ áîëüøóþ ÷àñòü âðåìåíè. Èõ ôèëîñîôèÿ è ìèðîâîççðåíèå. Èõ ìíåíèÿ è îöåíêè. Òî, î ÷åì îíè äóìàþ, ÷òî ãîâîðÿò è, ãëàâíîå, êàê ãîâîðÿò è ïîñòóïàþò ïî îòíîøåíèþ ê íàì. Ëþäè ñîçäàþò ïñèõîëîãè÷åñêèé êëèìàò - ñðåäó, â êîòîðîé ìû æèâåì. È ìû íå ìîæåì íå &quot;ïðîñàëèâàòüñÿ&quot; ýòîé ñðåäîé êàæäó ìèíóòó ñâîåé ñîöèàëüíîé æèçíè.<br />
+	А основное влияние на наше развитие (около 80%) оказывают люди, с которыми мы общаемся большую часть времени. Их философия и мировоззрение. Их мнения и оценки. То, о чем они думаю, что говорят и, главное, как говорят и поступают по отношению к нам. Люди создают психологический климат - среду, в которой мы живем. И мы не можем не &quot;просаливаться&quot; этой средой кажду минуту своей социальной жизни.<br />
 	<br />
-	ß çíàë, ÷òî âëèÿíèå ñîöèóìà çíà÷èìî. Íî, ÷åñòíî ãîâîðÿ, äàæå íå ïðåäïîëàãàë, ÷òî îí íàñòîëüêî ìàñøòàáíî. È ýòî î÷åíü õîðîøî îáúÿñíÿåò, ïî÷åìó ó ìíîãèõ ëþäåé &quot;âäðóã&quot; ðåçêî ìåíÿåòñÿ æèçíü â òó èëè èíóþ ñòîðîíó. Ïîíàáëþäàéòå çà èñòîðèÿìè ñâîèõ çíàêîìûõ, è Âû óâèäèòå ýòî ñàìè.<br />
+	Я знал, что влияние социума значимо. Но, честно говоря, даже не предполагал, что он настолько масштабно. И это очень хорошо объясняет, почему у многих людей &quot;вдруг&quot; резко меняется жизнь в ту или иную сторону. Понаблюдайте за историями своих знакомых, и Вы увидите это сами.<br />
 	<br />
-	Â çàâåðøåíèå âîò íåñêîëüêî òðàíñôîðìàöèîííûõ âîïðîñîâ íà ýòó:<br />
-	(ëó÷øå íå ÷èòàéòå èõ, åñëè áîèòåñü èçìåíåíèé)<br />
+	В завершение вот несколько трансформационных вопросов на эту:<br />
+	(лучше не читайте их, если боитесь изменений)<br />
 	<br />
-	<span style="font-size: 10px;">- Êòî Âàñ îêðóæàåò è ïî÷åìó íà ñàìîì äåëå ýòè ëþäè ðÿäîì ñ Âàìè?<br />
+	<span style="font-size: 10px;">- Кто Вас окружает и почему на самом деле эти люди рядом с Вами?<br />
 	<br />
-	- ×åãî áû Âàì õîòåëîñü âèäåòü â îòíîøåíèÿõ ñ ëþäüìè?<br />
+	- Чего бы Вам хотелось видеть в отношениях с людьми?<br />
 	<br />
-	- Ñêîëüêî ðÿäîì ñ Âàìè òåõ, êòî Âàì äàåò òàêèå îòíîøåíèÿ? È ñêîëüêî òåõ, êòî ëèøü ñúåäàåò Âàøå âðåìÿ?</span></p>
+	- Сколько рядом с Вами тех, кто Вам дает такие отношения? И сколько тех, кто лишь съедает Ваше время?</span></p>
 <p style="text-align: right;">
-	<em>Åãîð Áóëûãèí<br />
-	23 ñåíòÿáðÿ 2011</em></p>
+	<em>Егор Булыгин<br />
+	23 сентября 2011</em></p>
 <p style="text-align: center;">
 	<a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -57,16 +57,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setupb336.html?id=F4A6B&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupa09d.html?id=F4A6B&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupa3e3.html?id=F4A6B&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupf4ab.html?id=F4A6B&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup548d.html?id=F4A6B&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupb336.html?id=F4A6B&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa09d.html?id=F4A6B&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa3e3.html?id=F4A6B&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupf4ab.html?id=F4A6B&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup548d.html?id=F4A6B&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -93,7 +93,7 @@ function voted(){
 <p>
 	&nbsp;</p>
 <p>
-	<span style="font-size: 14px;"><strong>Ñëåäóþùèé ìàòåðèàë â ýòîé ñåðèè:</strong> <a href="index14e2.html?id=F4A6D">×òî äåëàòü ñ &quot;áàëëàñòîì&quot; â Âàøåì îêðóæåíèè?</a></span></p>
+	<span style="font-size: 14px;"><strong>Следующий материал в этой серии:</strong> <a href="index14e2.html?id=F4A6D">Что делать с &quot;балластом&quot; в Вашем окружении?</a></span></p>
 <p style="text-align: center;">
 	&nbsp;
 <script>
@@ -121,22 +121,22 @@ var idcomments_post_url = 'F4A6B.html';
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F4A6B" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
 </script> </p>
-</span><p><a href=index9783.html?id=F4A6B class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index9783.html?id=F4A6B class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -197,7 +197,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -219,7 +219,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
