--- a/print97ad.html
+++ b/print97ad.html
@@ -1,9 +1,9 @@
 <html>
-<title>Ñòðàòåãèÿ èíôîáèçíåñà íà ÿçûêå áëîíäèíîê ;)</title>
+<title>Стратегия инфобизнеса на языке блондинок ;)</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=blondy_strategy by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:05 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Ñòðàòåãèÿ èíôîáèçíåñà íà ÿçûêå áëîíäèíîê ;)'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Стратегия инфобизнеса на языке блондинок ;)'>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
@@ -14,89 +14,89 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñòðàòåãèÿ èíôîáèçíåñà íà ÿçûêå áëîíäèíîê ;)</h1><a href=index97ad.html?id=blondy_strategy class=slink>web-âåðñèÿ</a><p><span class='print'><p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Стратегия инфобизнеса на языке блондинок ;)</h1><a href=index97ad.html?id=blondy_strategy class=slink>web-версия</a><p><span class='print'><p>
 	&nbsp;</p>
 <div>
-	Ñåãîäíÿ ìíå íàïîìíèëè äàâíèé ïðèêîë èç ñåðèè Ìàðêåòèíã äëÿ æåíùèí:</div>
+	Сегодня мне напомнили давний прикол из серии Маркетинг для женщин:</div>
 <div>
-	Òû ïðèøëà íà âå÷åðèíêó ñ äðóçüÿìè è âèäèøü ñèìïàòè÷íîãî ïàðíÿ. Îäèí èç òâîèõ äðóçåé ïîäõîäèò ê íåìó è ãîâîðèò: &#39;Ñ íåé êëàññíî â ïîñòåëè&#39;.</div>
+	Ты пришла на вечеринку с друзьями и видишь симпатичного парня. Один из твоих друзей подходит к нему и говорит: &#39;С ней классно в постели&#39;.</div>
 <div>
-	Ýòî ðåêëàìà. Òû çàëåçàåøü íî÷üþ íà êðûøó äîìà è îðåøü òàê, ÷òî ñëûøèò âåñü ðàéîí: &#39;Ñî ìíîé êëàññíî â ïîñòåëè&#39;. Ýòî ñïàì. Òû íå èäåøü íà âå÷åðèíêó, íî òàì âñå òîëüêî è ãîâîðÿò î òîì, êàê êëàññíî ñ òîáîé â ïîñòåëè. Ýòî óçíàâàåìûé áðåíä&hellip;.</div>
+	Это реклама. Ты залезаешь ночью на крышу дома и орешь так, что слышит весь район: &#39;Со мной классно в постели&#39;. Это спам. Ты не идешь на вечеринку, но там все только и говорят о том, как классно с тобой в постели. Это узнаваемый бренд&hellip;.</div>
 <div>
 	&nbsp;</div>
 <div>
-	Êàê ãîâîðèòñÿ &quot;íàâåÿëî&quot; è ÿ ïîíÿë, êàê äîñòóïíî îáúÿñíèòü ñòðàòåãèþ èíôîáèçíåñà:</div>
+	Как говорится &quot;навеяло&quot; и я понял, как доступно объяснить стратегию инфобизнеса:</div>
 <div>
 	&nbsp;</div>
 <h1>
-	Èíôî-ìàðêåòèíã äëÿ æåíùèí</h1>
+	Инфо-маркетинг для женщин</h1>
 <div>
-	1. Òû äåëàåøü ñâîþ ñàìóþ îòêðîâåííóþ ôîòêó è âûâåøèâàåøü åå â èíòåðíåòå ñ ïîäïèñüþ &laquo;Óâèäèìñÿ íà âå÷åðèíêå&raquo;.</div>
+	1. Ты делаешь свою самую откровенную фотку и вывешиваешь ее в интернете с подписью &laquo;Увидимся на вечеринке&raquo;.</div>
 <div>
-	Ýòî âèðóñíûé ìàðêåòèíã.</div>
-<div>
-	&nbsp;</div>
-<div>
-	2. Ïîêà âñå íà âå÷åðèíêå ïûòàþòñÿ óáåäèòü, ÷òî èìåííî ñ íèìè êëàññíî â ïîñòåëè, òû óñòðàèâàåøü ñòðèïòèç.</div>
-<div>
-	Ýòî òåñò-äðàéâ.</div>
+	Это вирусный маркетинг.</div>
 <div>
 	&nbsp;</div>
 <div>
-	3. ...À êîãäà íà òåáå îñòàåòñÿ ïîñëåäíÿÿ äåòàëü îäåæäû, òû îñòàíàâëèâàåøüñÿ, è ãîâîðèøü ÷òî ïðîäîëæåíèå áóäåò äëÿ òåõ, êòî óãîñòèò òåáÿ øîêîëàäêîé.</div>
+	2. Пока все на вечеринке пытаются убедить, что именно с ними классно в постели, ты устраиваешь стриптиз.</div>
 <div>
-	Ýòî äâóõøàãîâûå ïðîäàæè.</div>
-<div>
-	&nbsp;</div>
-<div>
-	4. Ñòðèïòèç òû çàïèñûâàåøü íà âèäåî, è ïðåäëàãàåøü çàïèñü òåì, êòî ïðèõîäèò íà ñëåäóþùóþ âå÷åðèíêó.</div>
-<div>
-	Ýòî ëèäãåí.</div>
+	Это тест-драйв.</div>
 <div>
 	&nbsp;</div>
 <div>
-	5. Íà ñëåäóþùåé âå÷åðèíêå ïðåäëàãàåøü æèâîé ñòðèïòèç çà øîêîëàäêó.</div>
+	3. ...А когда на тебе остается последняя деталь одежды, ты останавливаешься, и говоришь что продолжение будет для тех, кто угостит тебя шоколадкой.</div>
 <div>
-	Ýòî ôðîíò-ýíä.</div>
-<div>
-	&nbsp;</div>
-<div>
-	6. Òåì, êòî ïîñëå ñòðèïòèçà õî÷åò ïðîäîëæåíèÿ - ãîâîðèøü, ÷òî î÷åíü ëþáèøü äðàãîöåííîñòè.</div>
-<div>
-	Ýòî áýê-ýíä.</div>
+	Это двухшаговые продажи.</div>
 <div>
 	&nbsp;</div>
 <div>
-	...Íî ÷òîáû òåáÿ óâàæàëè, ñðàçó ñîîáùàåøü, ÷òî ñåãîäíÿ ñ òîáîé óéäåò òîëüêî îäèí ìóæ÷èíà.</div>
+	4. Стриптиз ты записываешь на видео, и предлагаешь запись тем, кто приходит на следующую вечеринку.</div>
 <div>
-	Ýòî êîëè÷åñòâåííûé äåäëàéí.</div>
-<div>
-	&nbsp;</div>
-<div>
-	&hellip;À ÷òîáû ïîòîðîïèëèñü, ãîâîðèøü ÷òî ÷åðåç ÷àñ òåáÿ æäóò íà äðóãîé âå÷åðèíêå.</div>
-<div>
-	Ýòî âðåìåííîé äåäëàéí.</div>
+	Это лидген.</div>
 <div>
 	&nbsp;</div>
 <div>
-	7. Êîãäà îí óáåæäàåòñÿ, ÷òî ñ òîáîé äåéñòâèòåëüíî êëàññíî â ïîñòåëè, òû íà íåñêîëüêî äíåé èñ÷åçàåøü è íå îòâå÷àåøü íà òåëåôîí.</div>
+	5. На следующей вечеринке предлагаешь живой стриптиз за шоколадку.</div>
 <div>
-	Ýòî ñòðàòåãèÿ äåôèöèòà.</div>
+	Это фронт-энд.</div>
 <div>
 	&nbsp;</div>
 <div>
-	8. À êîãäà òû ïîÿâëÿåøüñÿ è îí ãîâîðèò, ÷òî íå ìîæåò áåç òåáÿ æèòü - òû îòâå÷àåøü, ÷òî åñòü òîëüêî îäíî ðåøåíèå...</div>
+	6. Тем, кто после стриптиза хочет продолжения - говоришь, что очень любишь драгоценности.</div>
 <div>
-	Ýòî àêêàóíò-ìåíåäæìåíò.</div>
+	Это бэк-энд.</div>
+<div>
+	&nbsp;</div>
+<div>
+	...Но чтобы тебя уважали, сразу сообщаешь, что сегодня с тобой уйдет только один мужчина.</div>
+<div>
+	Это количественный дедлайн.</div>
+<div>
+	&nbsp;</div>
+<div>
+	&hellip;А чтобы поторопились, говоришь что через час тебя ждут на другой вечеринке.</div>
+<div>
+	Это временной дедлайн.</div>
+<div>
+	&nbsp;</div>
+<div>
+	7. Когда он убеждается, что с тобой действительно классно в постели, ты на несколько дней исчезаешь и не отвечаешь на телефон.</div>
+<div>
+	Это стратегия дефицита.</div>
+<div>
+	&nbsp;</div>
+<div>
+	8. А когда ты появляешься и он говорит, что не может без тебя жить - ты отвечаешь, что есть только одно решение...</div>
+<div>
+	Это аккаунт-менеджмент.</div>
 <div>
 	&nbsp;</div>
 <div>
 	
-<h3>Êîììåíòàðèè Facebook</h3>
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/blondy_strategy" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -119,13 +119,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </div>
-</span><p><a href=index97ad.html?id=blondy_strategy class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index97ad.html?id=blondy_strategy class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -186,7 +186,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -208,7 +208,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
