--- a/print98e7.html
+++ b/print98e7.html
@@ -2,7 +2,7 @@
 <title>Мировое Правительство</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=96DC0E5E-F45F7-9E999939 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:35 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Готовимся мы тут как-то с Константином Пуховым к нашему Новокодовскому НЛП-практику, медитируем над концепцией сегодняшнего НЛП, и вспоминается нашему творчеству одна притча...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
