--- a/print93ed.html
+++ b/print93ed.html
@@ -2,7 +2,7 @@
 <title>Языки любви</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F471B by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:14 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='любовь, любимый'>
 <meta name="description" content='Что такое любовь, как она связана с эмоциями, и как мы можем выражать ее, чтобы наши любимые чувствовали ее на все 100%. В статье раскрыты основные идеи книги Гери Чепмена "Пять языков любви".'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
