--- a/print94d5.html
+++ b/print94d5.html
@@ -2,7 +2,7 @@
 <title>Невербальная манипуляция. Искусство присоединения.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=52FCBF6D-F429B-57C71EC1 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Пять принципов качественного раппорта.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
