--- a/print95a6.html
+++ b/print95a6.html
@@ -2,7 +2,7 @@
 <title>Этапы отношений мужчины и женщины и их задачи</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=95A3C8AD-F46D4-C7810B7D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:29:33 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Смысл этапов - понимать, где какие задачи решаются, и не проскакивать этапы не решив их задачи, а в случае наличия пропущенных задач - обнаружить их и решить.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
