--- a/print9606.html
+++ b/print9606.html
@@ -2,7 +2,7 @@
 <title>Мета-системные уровни или коммуникация с Коллективным Бессознательным</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=E9C8323C-F45AA-E174FB9E by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='бессознательное, нлп'>
 <meta name="description" content='Коллективный разум, как система большего масштаба. Механизм техники.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
