--- a/print96a7.html
+++ b/print96a7.html
@@ -1,10 +1,10 @@
 <html>
-<title>Áëàãîäàðèòü äîëæåí äàþùèé</title>
+<title>Благодарить должен дающий</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F2F5B577-F45F4-635C9E21 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:34 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
-<meta name="description" content='Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.'>
+<meta name="description" content='Притча из сборника 101 история дзен.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Áëàãîäàðèòü äîëæåí äàþùèé</h1><a href=index96a7.html?id=F2F5B577-F45F4-635C9E21 class=slink>web-âåðñèÿ</a><p><span class='print'><P>Êîãäà Ñýéñåöó áûë íàñòîÿòåëåì ìîíàñòûðÿ Ýíãàêó â ýðó Êàìàêóðà (1192-1333), åìó ïîíàäîáèëîñü íîâîå ó÷åáíîå çäàíèå, èáî òàì, ãäå îí ó÷èë, áûëî óæå ñëèøêîì òåñíî. Êóïåö èç Ýäî ïî èìåíè Óìýäçó Ñýéáåé ðåøèë ïîæåðòâîâàòü íà ïîñòðîéêó íîâîãî ó÷åáíîãî çäàíèÿ ïÿòüñîò çîëîòûõ ìîíåò, íàçûâàåìûõ ðèî, è ïðèíåñ èõ ó÷èòåëþ.</P>
-<P>— Õîðîøî, ÿ âîçüìó èõ, — ñêàçàë Ñýéñåöó. Ïîäàâ ó÷èòåëþ ìåøîê ñ çîëîòîì, Óìýäçó îñòàëñÿ íåäîâîëåí åãî áåçðàçëè÷íûì îòíîøåíèåì. Öåëûé ãîä ìîæíî ïðîæèòü íà òðè ðèî, à òóò íå áëàãîäàðÿò çà ïÿòüñîò.</P>
-<P>— Â ìåøêå ïÿòüñîò ðèî, — íàìåêíóë îí.</P>
-<P>— Òû óæå ãîâîðèë ýòî, — îòâåòèë Ñýéñåöó.</P>
-<P>— Íî âåäü äàæå äëÿ òàêîãî áîãàòîãî êóïöà, êàê ÿ, ýòî óéìà äåíåã, — ñêàçàë Óìýäçó.</P>
-<P>— Òû õî÷åøü, ÷òîáû ÿ çà íèõ ïîáëàãîäàðèë òåáÿ? — ñïðîñèë Ñýéñåöó.</P>
-<P>— Âû äîëæíû ýòî ñäåëàòü, — îòâåòèë êóïåö.</P>
-<P>— Ïî÷åìó æå? — óäèâèëñÿ Ñýéñåöó, — áëàãîäàðèòü äîëæåí äàþùèé!</P>
-<P align=right><EM>101 èñòîðèÿ äçåí<BR></EM><FONT size=1><EM>îïóáëèêîâàíî íà NLPING.ru 10.08.2007</EM></FONT></P>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Благодарить должен дающий</h1><a href=index96a7.html?id=F2F5B577-F45F4-635C9E21 class=slink>web-версия</a><p><span class='print'><P>Когда Сэйсецу был настоятелем монастыря Энгаку в эру Камакура (1192-1333), ему понадобилось новое учебное здание, ибо там, где он учил, было уже слишком тесно. Купец из Эдо по имени Умэдзу Сэйбей решил пожертвовать на постройку нового учебного здания пятьсот золотых монет, называемых рио, и принес их учителю.</P>
+<P>— Хорошо, я возьму их, — сказал Сэйсецу. Подав учителю мешок с золотом, Умэдзу остался недоволен его безразличным отношением. Целый год можно прожить на три рио, а тут не благодарят за пятьсот.</P>
+<P>— В мешке пятьсот рио, — намекнул он.</P>
+<P>— Ты уже говорил это, — ответил Сэйсецу.</P>
+<P>— Но ведь даже для такого богатого купца, как я, это уйма денег, — сказал Умэдзу.</P>
+<P>— Ты хочешь, чтобы я за них поблагодарил тебя? — спросил Сэйсецу.</P>
+<P>— Вы должны это сделать, — ответил купец.</P>
+<P>— Почему же? — удивился Сэйсецу, — благодарить должен дающий!</P>
+<P align=right><EM>101 история дзен<BR></EM><FONT size=1><EM>опубликовано на NLPING.ru 10.08.2007</EM></FONT></P>
 <P align=center><FONT face=Verdana size=2><a name='vote'></a><script type='text/javascript'>
 function light(num){
     if(num >= 1) document.getElementById('star1').className = 'active';
@@ -45,16 +45,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup4184.html?id=F2F5B577-F45F4-635C9E21&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupf2c3.html?id=F2F5B577-F45F4-635C9E21&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5fb1.html?id=F2F5B577-F45F4-635C9E21&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2dfa.html?id=F2F5B577-F45F4-635C9E21&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupae73.html?id=F2F5B577-F45F4-635C9E21&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4184.html?id=F2F5B577-F45F4-635C9E21&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupf2c3.html?id=F2F5B577-F45F4-635C9E21&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5fb1.html?id=F2F5B577-F45F4-635C9E21&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2dfa.html?id=F2F5B577-F45F4-635C9E21&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupae73.html?id=F2F5B577-F45F4-635C9E21&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -77,12 +77,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Áàéêè è ïðèò÷è&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='ÍËÏåðñêàÿ áàéêà.'>Ñàìàÿ âêóñíàÿ êîíôåòà</a></li><li><a href='F47A4.html' title='Ñêàçêà äëÿ âçðîñëûõ ïðî íè÷åãî-íå-íåäåëàíèå è ñìûñë.'>Ïðèò÷à "Ãîâîðÿùàÿ ðûáà"</a></li><li><a href='F479F.html' title='Ìíîãèå èç íàñ õîòÿò íà÷àòü ÷òî-òî íîâîå, íî íå ìíîãèå ýòî äåëàþò. Ïî÷åìó? Ïîòîìó ÷òî ìû ïðèâûêëè ê òîìó ÷òî èìååì, êàêèì áû îíî íè áûëî. È ïðè ìûñëè îá èçìåíåíèÿõ ó ìíîãèõ èç íàñ ïîÿâëÿåòñÿ ñòðàõ... '>Ïðèâû÷êè, ñòðàõè è óñïåõ</a></li><li><a href='F471C.html' title='Ïðèò÷à îò Íèëà Äîíàëüäà Óîëøà ïðî òî, êàê âàæíî ïîìíèòü, êòî ìû...'>Ìàëåíüêàÿ äóøà è ñîëíöå</a></li><li><a href='8DBBC4B9-F45F5-CE624629.html' title='Ïðèò÷à èç ñáîðíèêà 101 èñòîðèÿ äçåí.'>Õîðîøåå è ïëîõîå</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Байки и притчи&quot;</p> <ul><li><a href='11EFAB56-F4620-8C197C8C.html' title='НЛПерская байка.'>Самая вкусная конфета</a></li><li><a href='F47A4.html' title='Сказка для взрослых про ничего-не-неделание и смысл.'>Притча "Говорящая рыба"</a></li><li><a href='F479F.html' title='Многие из нас хотят начать что-то новое, но не многие это делают. Почему? Потому что мы привыкли к тому что имеем, каким бы оно ни было. И при мысли об изменениях у многих из нас появляется страх... '>Привычки, страхи и успех</a></li><li><a href='F471C.html' title='Притча от Нила Дональда Уолша про то, как важно помнить, кто мы...'>Маленькая душа и солнце</a></li><li><a href='8DBBC4B9-F45F5-CE624629.html' title='Притча из сборника 101 история дзен.'>Хорошее и плохое</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F2F5B577-F45F4-635C9E21" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -105,13 +105,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </FONT>
-</span><p><a href=index96a7.html?id=F2F5B577-F45F4-635C9E21 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index96a7.html?id=F2F5B577-F45F4-635C9E21 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -172,7 +172,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -194,7 +194,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
