--- a/print977b.html
+++ b/print977b.html
@@ -1,10 +1,10 @@
 <html>
-<title>AQAL: Ñïèðàëüíàÿ Äèíàìèêà è ñòàäèè ðàçâèòèÿ Ýãî</title>
+<title>AQAL: Спиральная Динамика и стадии развития Эго</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=EEB0610A-F4676-998B3D10 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:29:33 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='ñïèðàëüíàÿ äèíàìèêà'>
-<meta name="description" content='Êîðåëëÿöèÿ Ñïèðàëüíîé Äèíàìèêè è ñòàäèé ðàçâèòèÿ Ýãî.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='спиральная динамика'>
+<meta name="description" content='Корелляция Спиральной Динамики и стадий развития Эго.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,12 +14,12 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>AQAL: Ñïèðàëüíàÿ Äèíàìèêà è ñòàäèè ðàçâèòèÿ Ýãî</h1><a href=index977b.html?id=EEB0610A-F4676-998B3D10 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	Ñîîòâåòñòâèå óðîâíåé Ñïèðàëüíîé Äèíàìèêè è ñòàäèé ðàçâèòèÿ Ýãî ïðèâåäåíî íà êàðòèíêå. Êëèêíèòå íà íåå, ÷òîáû ïîëó÷èòü ïîëíîðàçìåðíîå èçîáðàæåíèå (834kb).</p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>AQAL: Спиральная Динамика и стадии развития Эго</h1><a href=index977b.html?id=EEB0610A-F4676-998B3D10 class=slink>web-версия</a><p><span class='print'><p>
+	Соответствие уровней Спиральной Динамики и стадий развития Эго приведено на картинке. Кликните на нее, чтобы получить полноразмерное изображение (834kb).</p>
 <p align="center">
-	<a href="img/art/Big_AQAL_Rus.jpg" target="_blank" title="AQAL:Ñïèðàëüíàÿ äèíàìèêà è ñòàäèè ðàçâèòèÿ Ýãî"><img alt="Êëèêíèòå, ÷òîáû ïîëó÷èòü ïîëíîðàçìåðíîå èçîáðàæåíèå (834kb)" border="0" height="269" src="img/art/Big_AQAL_Rus_ico.gif" width="400" /></a></p>
+	<a href="img/art/Big_AQAL_Rus.jpg" target="_blank" title="AQAL:Спиральная динамика и стадии развития Эго"><img alt="Кликните, чтобы получить полноразмерное изображение (834kb)" border="0" height="269" src="img/art/Big_AQAL_Rus_ico.gif" width="400" /></a></p>
 <p align="right">
-	<em>Èñòî÷íèê: <a href="http://www.get.metalevel.net/" target="_blank" title="Ðåñóðñ, ïîñâÿùåííûé Ñïèðàëüíîé Äèíàìèêå.">get.metalevel.net</a></em></p>
+	<em>Источник: <a href="http://www.get.metalevel.net/" target="_blank" title="Ресурс, посвященный Спиральной Динамике.">get.metalevel.net</a></em></p>
 <p align="center">
 	<font face="Verdana" size="2"><a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -43,16 +43,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup70e5.html?id=EEB0610A-F4676-998B3D10&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupc17c.html?id=EEB0610A-F4676-998B3D10&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2e96.html?id=EEB0610A-F4676-998B3D10&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupa003.html?id=EEB0610A-F4676-998B3D10&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup1393.html?id=EEB0610A-F4676-998B3D10&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup70e5.html?id=EEB0610A-F4676-998B3D10&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupc17c.html?id=EEB0610A-F4676-998B3D10&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2e96.html?id=EEB0610A-F4676-998B3D10&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupa003.html?id=EEB0610A-F4676-998B3D10&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup1393.html?id=EEB0610A-F4676-998B3D10&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -75,12 +75,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Ñïèðàëüíàÿ Äèíàìèêà&quot;</p> <ul><li><a href='F5576ACF-F4601-3A7A13DF.html' title='Êðàòêàÿ õàðàêòåðèñòèêà êàæäîãî óðîâíÿ Ñïèðàëüíîé Äèíàìèêè â ïîíèìàíèè Ãðýéâçà.'>Òèïîëîãèÿ ñèñòåì öåííîñòåé Êëýðà Ãðåéâçà</a></li><li><a href='D7190801-F4634-0E7186CF.html' title='Ýòàïû èçìåíåíèé, ÷åðåç êîòîðûå ïðîõîäèò ñèñòåìà, è 6 óñëîâèé, íåîáõîäèìûõ äëÿ óñïåøíûõ èçìåíåíèé.'>Óïðàâëåíèå èçìåíåíèÿìè ìåòîäàìè Ñïèðàëüíîé Äèíàìèêè</a></li><li><a href='F4759.html' title='Ëåêöèÿ ïî Ñïèðàëüíîé Äèíàìèêå. ×èòàåò Àëåêñåé Êàïòåðåâ.'>Ëåêöèÿ ïî Ñïèðàëüíîé Äèíàìèêå</a></li><li><a href='432CBFC3-F44FD-314CDA54.html' title='Êðàòêàÿ îçíàêîìèòåëüíàÿ ñòàòüÿ Àëåêñåÿ Êàïòåðåâà.'>Ýâîëþöèÿ öåííîñòåé: Òåîðèÿ Ãðýéâñà è Ñïèðàëüíàÿ äèíàìèêà</a></li><li><a href='AE8AA57D-F45B5-93F63E8E.html' title='Öåííîñòè, öåëè è ñïîñîáû ïðèñïîñîáëåíèÿ ïðåäñòàâèòåëåé êàæäîãî óðîâíÿ ñïèðàëüíîé äèíàìèêè.'>Ñïèðàëüíàÿ äèíàìèêà (öåëè è öåííîñòè)</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Спиральная Динамика&quot;</p> <ul><li><a href='F5576ACF-F4601-3A7A13DF.html' title='Краткая характеристика каждого уровня Спиральной Динамики в понимании Грэйвза.'>Типология систем ценностей Клэра Грейвза</a></li><li><a href='D7190801-F4634-0E7186CF.html' title='Этапы изменений, через которые проходит система, и 6 условий, необходимых для успешных изменений.'>Управление изменениями методами Спиральной Динамики</a></li><li><a href='F4759.html' title='Лекция по Спиральной Динамике. Читает Алексей Каптерев.'>Лекция по Спиральной Динамике</a></li><li><a href='432CBFC3-F44FD-314CDA54.html' title='Краткая ознакомительная статья Алексея Каптерева.'>Эволюция ценностей: Теория Грэйвса и Спиральная динамика</a></li><li><a href='AE8AA57D-F45B5-93F63E8E.html' title='Ценности, цели и способы приспособления представителей каждого уровня спиральной динамики.'>Спиральная динамика (цели и ценности)</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/EEB0610A-F4676-998B3D10" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -103,13 +103,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
  </font></p>
-</span><p><a href=index977b.html?id=EEB0610A-F4676-998B3D10 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index977b.html?id=EEB0610A-F4676-998B3D10 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -170,7 +170,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -192,7 +192,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
