--- a/print9a4a.html
+++ b/print9a4a.html
@@ -1,8 +1,8 @@
 <html>
-<title>Ìàðøðóò. ×àñòü ÷åòâåðòàÿ. Ìåñòî Ñèëû: íàéòè èëè ñîçäàòü?</title>
+<title>Маршрут. Часть четвертая. Место Силы: найти или создать?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C23 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:07:32 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
@@ -14,29 +14,29 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ìàðøðóò. ×àñòü ÷åòâåðòàÿ. Ìåñòî Ñèëû: íàéòè èëè ñîçäàòü?</h1><a href=index9a4a.html?id=F4C23 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Маршрут. Часть четвертая. Место Силы: найти или создать?</h1><a href=index9a4a.html?id=F4C23 class=slink>web-версия</a><p><span class='print'><p>
 	&nbsp;</p>
 <p align="JUSTIFY">
-	Ñåãîäíÿ ìû ïîéäåì â ìåñòî, çíàêîìîå òîëüêî òåáå. Ëþáèìîå ìåñòî, â êîòîðîì òåáå õîðîøî, êóäà òû õî÷åøü âîçâðàùàòüñÿ ñíîâà è ñíîâà. ×òî ýòî çà ìåñòî? Ïî÷åìó òåáÿ òÿíåò èìåííî òóäà?</p>
+	Сегодня мы пойдем в место, знакомое только тебе. Любимое место, в котором тебе хорошо, куда ты хочешь возвращаться снова и снова. Что это за место? Почему тебя тянет именно туда?</p>
 <p align="JUSTIFY">
-	Êàêîå ÷óâñòâî òû èñïûòûâàåøü, êîãäà íàõîäèøüñÿ òàì? È êîãäà åùå â æèçíè òû õîòåë áû ÷óâñòâîâàòü ñåáÿ òàê æå?</p>
+	Какое чувство ты испытываешь, когда находишься там? И когда еще в жизни ты хотел бы чувствовать себя так же?</p>
 <p align="JUSTIFY">
-	Òû ìîæåøü ñêàçàòü: &laquo;Íî êàê òîëüêî ÿ óõîæó îòòóäà, âñå ÷óâñòâà ïðîïàäàþò, è ÿ ñíîâà ñòàíîâëþñü áåñïîêîéíûì èëè íåðâíûì èëè çàáûâàþ âîîáùå î òîì, ÷òî ìíå êîãäà-òî áûâàåò õîðîøî&raquo;. È òîãäà ÿ ñïðîøó òåáÿ: &laquo;Ðàçâå êîãäà òû óõîäèøü èç ñâîåé êâàðòèðû, îíà ïåðåñòàåò áûòü òâîåé? Íåò &ndash; îíà ïî-ïðåæíåìó îñòàåòñÿ òâîèì äîìîì, è íå îáÿçàòåëüíî íàõîäèòüñÿ òàì âñå âðåìÿ, ÷òîáû áûòü óâåðåííûì â òîì, ÷òî ýòî òàê&raquo;.</p>
+	Ты можешь сказать: &laquo;Но как только я ухожу оттуда, все чувства пропадают, и я снова становлюсь беспокойным или нервным или забываю вообще о том, что мне когда-то бывает хорошо&raquo;. И тогда я спрошу тебя: &laquo;Разве когда ты уходишь из своей квартиры, она перестает быть твоей? Нет &ndash; она по-прежнему остается твоим домом, и не обязательно находиться там все время, чтобы быть уверенным в том, что это так&raquo;.</p>
 <p align="JUSTIFY">
-	ß î÷åíü ëþáëþ áûâàòü íà äà÷å. Ñèäåòü òàì ëåòíèì âå÷åðîì âîçëå êèðïè÷íîé ïå÷êè, ñòîÿùåé ïðÿìî íà óëèöå, ñìîòðåòü íà çâåçäû è ïèòü íåâåðîÿòíî äóøèñòûé ÷àé, ïðèãîòîâëåííûé ìîåé áàáóøêîé. Ìíå íå÷àñòî óäàåòñÿ áûâàòü òàì, íî êàæäûé ðàç, ñòîèò ìíå îá ýòîì âñïîìíèòü, êàê ÿ âíîâü îùóùàþ òî ñïîêîéñòâèå è óìèðîòâîðåííîñòü è óäèâèòåëüíîå åäèíåíèå ñ ïðèðîäîé, êîòîðîå áûâàåò òàì, íà äà÷å.</p>
+	Я очень люблю бывать на даче. Сидеть там летним вечером возле кирпичной печки, стоящей прямо на улице, смотреть на звезды и пить невероятно душистый чай, приготовленный моей бабушкой. Мне нечасто удается бывать там, но каждый раз, стоит мне об этом вспомнить, как я вновь ощущаю то спокойствие и умиротворенность и удивительное единение с природой, которое бывает там, на даче.</p>
 <p align="JUSTIFY">
-	Âñå íàøè ÷óâñòâà, îùóùåíèÿ è ìåñòà íàøåé Ñèëû, ãäå íàì òàê õîðîøî, ìû âñåãäà íîñèì ñ ñîáîé &ndash; â íàøåì ñåðäöå. È äëÿ àêòèâèçàöèè Ñèëû &ndash; äîñòàòî÷íî âñïîìíèòü îá ýòîì ìåñòå.</p>
+	Все наши чувства, ощущения и места нашей Силы, где нам так хорошо, мы всегда носим с собой &ndash; в нашем сердце. И для активизации Силы &ndash; достаточно вспомнить об этом месте.</p>
 <p align="JUSTIFY">
-	Ìîÿ èäåÿ &ndash; ñäåëàòü òàê, ÷òîáû â íàøåé æèçíè áûëî êàê ìîæíî áîëüøå Ìåñò Ñèëû: ìåñò, çàðÿæàþùèõ íàñ õîðîøèì íàñòðîåíèåì, áîäðîñòüþ, óñïåõîì, ñ÷àñòüåì, ðàäîñòüþ, äåòñêèì îùóùåíèåì, ÷òî â æèçíè âîçìîæíî âñå, òèøèíîé è ïîêîåì, ðàññëàáëåííîñòüþ è óìèðîòâîðåííîñòüþ &ndash; âñåì òåì, ÷òî íàïîëíÿåò íàøó æèçíü òàêèìè ÿðêèìè êðàñêàìè, ÷óäåñíûìè çâóêàìè, óäèâèòåëüíûìè ÷óâñòâàìè è íåîæèäàííûìè ñþðïðèçàìè.</p>
+	Моя идея &ndash; сделать так, чтобы в нашей жизни было как можно больше Мест Силы: мест, заряжающих нас хорошим настроением, бодростью, успехом, счастьем, радостью, детским ощущением, что в жизни возможно все, тишиной и покоем, расслабленностью и умиротворенностью &ndash; всем тем, что наполняет нашу жизнь такими яркими красками, чудесными звуками, удивительными чувствами и неожиданными сюрпризами.</p>
 <p align="JUSTIFY">
-	Ñåãîäíÿ ìû ðèñóåì Êàðòó Ìåñò ñèëû: îòìå÷àåì íà íåé ñòîëüêî Ìåñò Ñèëû, ñêîëüêî åñòü ñåé÷àñ â âàøåé æèçíè. È ðÿäîì ñ êàæäûì ìåñòîì &ndash; ïîäïèñûâàåì, ÷åì æå îíî âàñ çàðÿæàåò.</p>
+	Сегодня мы рисуем Карту Мест силы: отмечаем на ней столько Мест Силы, сколько есть сейчас в вашей жизни. И рядом с каждым местом &ndash; подписываем, чем же оно вас заряжает.</p>
 <p align="JUSTIFY">
-	Î÷åíü õî÷åòñÿ ïîçíàêîìèòüñÿ ñ âàøèìè êàðòàìè&nbsp;<span style="font-size: 14px; ">â êîììåíòàðèÿõ.</span></p>
+	Очень хочется познакомиться с вашими картами&nbsp;<span style="font-size: 14px; ">в комментариях.</span></p>
 <p class="p1" style="text-indent: 0px; text-align: right; ">
-	<em style="font-size: 14px; ">Åëåíà Ïèìåíîâà<br />
-	Èþëü 2012 ã.</em></p>
+	<em style="font-size: 14px; ">Елена Пименова<br />
+	Июль 2012 г.</em></p>
 <p class="p1" style="text-indent: 0px; text-align: center; ">
-	<a href="tss.html" style="font-size: 14px; background-color: rgb(255, 255, 255); ">Âåá-êóðñ &quot;ÑóïåðÑèëà ïîä êëþ÷&quot;</a></p>
+	<a href="tss.html" style="font-size: 14px; background-color: rgb(255, 255, 255); ">Веб-курс &quot;СуперСила под ключ&quot;</a></p>
 <p class="p1" style="text-indent: 0px; text-align: center; ">
 	&nbsp;</p>
 <p class="p1" style="text-indent: 0px; ">
@@ -62,16 +62,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup4384.html?id=F4C23&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup42ad.html?id=F4C23&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup5b79.html?id=F4C23&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2df4.html?id=F4C23&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setupcc0b.html?id=F4C23&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4384.html?id=F4C23&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup42ad.html?id=F4C23&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup5b79.html?id=F4C23&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2df4.html?id=F4C23&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setupcc0b.html?id=F4C23&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -112,26 +112,26 @@ function voted(){
 		}(document, 'script', 'facebook-jssdk'));</script>
 
 
-	<h3>Êîììåíòàðèè Facebook</h3>
+	<h3>Комментарии Facebook</h3>
 <div id="fb-root">
 	 </div>
 <div class="fb-comments" data-href="http://nlping.ru/F4C23" data-num-posts="100" data-width="600">
 	 </div>
 
-	<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+	<h3>Комментарии Вконтакте</h3>
 <br/>
 <div id="vk_comments">
 	 </div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false}, "F4C23");
 </script></p>
-</span><p><a href=index9a4a.html?id=F4C23 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=index9a4a.html?id=F4C23 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -192,7 +192,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -214,7 +214,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
