--- a/print9bf4.html
+++ b/print9bf4.html
@@ -2,7 +2,7 @@
 <title>Пять навыков, ведущих к деньгам</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A11 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:52 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Наверняка Вы часто слышали такую фразу: «Если ты такой умный, то почему ты такой бедный?» IQ и эрудиция не гарантируют Вам обеспеченную жизнь. Эмоциональный интеллект, кстати, тоже. Нужно кое-что еще... '>
 <link rel="stylesheet" href="css/print.css" type="text/css">
