--- a/print9c97.html
+++ b/print9c97.html
@@ -2,7 +2,7 @@
 <title>Коучинг. Стадии  развития.</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=80CE685C-F4614-5D368325 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:59:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='коучинг'>
 <meta name="description" content='Краткая история развития коучинга.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
