--- a/print9e18.html
+++ b/print9e18.html
@@ -2,7 +2,7 @@
 <title>Дзэн НЛП, или что в основе?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=C2412340-F42DC-7EB7C073 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:55:31 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Основополагающие принципы НЛП.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
