--- a/print9ede.html
+++ b/print9ede.html
@@ -2,7 +2,7 @@
 <title>Дзен базовых пресуппозиций НЛП</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=07418910-F4287-EF16D006 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:40 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Как все начиналось.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
