--- a/print9eeb.html
+++ b/print9eeb.html
@@ -2,7 +2,7 @@
 <title>Самая невидимая ошибка в отношениях</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C7F by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:17 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Почему любимый человек к вам охладел? Почему подчиненные забивают на работу, а руководители ни во что вас не ставят? Почему дети на вас кричат, а родители достают? В половине из этих случаев Вы допустили самую невидимую ошибку в отношениях...'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
